# witch-ver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: coverage.yml  deploy.yml  format.yml  lint.yml  static-analysis.yml  test.yml
tests/: __init__.py  __main__.py  base.py  test_git.py  test_integration.py  test_runner.py  test_semver.py  test_version.py  test_version_hook.py
tests/data/: .gitignore
tools/: format_all.py  formatters.sh  linters.sh
witch_ver/: __init__.py  git.py  integration.py  runner.py  semver.py  version.py  version_hook.py
